# controllers/SubscriptionService.js
@@ -1,14 +1,5 @@
 'use strict';
 
-exports.clearMonitoredItem = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * nodeId (String)
-  **/
-  // no response value expected for this operation
-  res.end();
-}
-
 exports.clearMonitoredItems = function(args, res, next) {
   /**
    * parameters expected in the args:
@@ -18,13 +9,22 @@ exports.clearMonitoredItems = function(args, res, next) {
   res.end();
 }
 
-exports.getMonitoredItem = function(args, res, next) {
+exports.clearMonitoredItemsForNodeId = function(args, res, next) {
   /**
    * parameters expected in the args:
   * nodeId (String)
   **/
+  // no response value expected for this operation
+  res.end();
+}
+
+exports.getAllMonitoredItems = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * limit (Integer)
+  **/
     var examples = {};
-  examples['application/json'] = { };
+  examples['application/json'] = "";
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
@@ -35,10 +35,28 @@ exports.getMonitoredItem = function(args, res, next) {
   
 }
 
-exports.getMonitoredItems = function(args, res, next) {
+exports.getMonitoredItem = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * limit (Integer)
+  * nodeId (String)
+  * attributeId (Integer)
+  **/
+    var examples = {};
+  examples['application/json'] = "";
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.getMonitoredItemsForNodeId = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * nodeId (String)
   **/
     var examples = {};
   examples['application/json'] = "";
@@ -57,9 +75,10 @@ exports.monitorItem = function(args, res, next) {
    * parameters expected in the args:
   * nodeId (String)
   * attributeId (Integer)
+  * body (MonitorItemOptions)
   **/
     var examples = {};
-  examples['application/json'] = { };
+  examples['application/json'] = "";
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
